docs/whoami.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: kube-system
  labels:
    app: whoami
spec:
  containers:
    - name: whoami
      image: traefik/whoami
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: whoami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: "PathPrefix(`/whoami`)"
      kind: Rule
      services:
        - name: whoami
          port: 80
